--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.7.1",
+    "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.12.22",
+    "@hookform/resolvers": "^3.2.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
+    "create-vite": "^4.4.1",
+    "dotenv": "^16.3.1",
+    "framer-motion": "^10.16.0",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1"
+    "react-hook-form": "^7.45.4",
+    "react-icons": "^4.10.1",
+    "styled-components": "^6.0.7",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
@@ -28,6 +38,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.0"
+    "vite": "^4.4.9"
   }
 }
